Switched resarch project to the same layout as posts.

--- a/src/site/research.html
+++ b/src/site/research.html
@@ -10,6 +10,6 @@ listing: true
 
 <ol class="index-list" reversed>
     {%- for post in collections['project'] | reverse %}
-        {%- include "project-in-list.html" %}
+        {%- include "post-in-list.html" %}
     {%- endfor %}
 </ol>
