--- a/src/site/index.html
+++ b/src/site/index.html
@@ -4,6 +4,6 @@ intro: |
     I’m Martin, an accessibility specialist with a background in user interface and interaction design, and frontend web development. I'm the Lead Accessibility Specialist at [Sage](https://www.sage.com/) and former co-organiser at [FrontendNE](https://www.frontendne.co.uk); here's a wee bit more [about me](/about) and [what I'm up to now](/now).
 layout: home
 home: true
-cta: true
+cta: false
 summaryImage: large
 ---
