Reworked cta functions.

--- a/src/site/research.html
+++ b/src/site/research.html
@@ -4,8 +4,16 @@ heading: My Research Projects
 intro: |
     I've done a lot of various research over the years; here are some of my highlights.
 layout: default
-noCta: true
 listing: true
+cta:
+    custom: true
+    headline: "Interested in my research?"
+    intro: |
+        If you are interested in my work, that's great! Let's talk about:
+
+        - Possible joined research projects
+        - Supervision of Bachelor or Master level research work
+        - Speaking at your event
 ---
 
 <ol class="index-list" reversed>
@@ -13,3 +21,4 @@ listing: true
         {%- include "post-in-list.html" %}
     {%- endfor %}
 </ol>
+
