--- a/src/site/teaching.html
+++ b/src/site/teaching.html
@@ -2,9 +2,19 @@
 title: Teaching
 intro: |
     Do you study physics? Into experiments? Here's what I can teach you.
+
+    Use the [university course portal](https://online.uni-graz.at/kfu_online/wblvangebot.wbshowlvoffer?ppersonnr=72850) to current or upcoming courses!
+
 layout: default
 resources: true
-noCta: true
+cta:
+    custom: true
+    headline: "Interested in writing your thesis?"
+    intro: |
+        If you are interested in writing your thesis with me, that's great! Let's talk about:
+
+        - Bachelor and Master level research
+        - Available thesis topics
 ---
 
 <ol class="hfeed index-list" reversed>
