Cleaned up teaching.

--- a/src/site/teaching.html
+++ b/src/site/teaching.html
@@ -3,7 +3,7 @@ title: Teaching
 intro: |
     Do you study physics? Into experiments? Here's what I can teach you.
 
-    Use the [university course portal](https://online.uni-graz.at/kfu_online/wblvangebot.wbshowlvoffer?ppersonnr=72850) to current or upcoming courses!
+    Use the [university course portal](https://online.uni-graz.at/kfu_online/wblvangebot.wbshowlvoffer?ppersonnr=72850) to sign-up for current or upcoming courses and to check-out locations and timetables!
 
 layout: default
 resources: true
@@ -11,7 +11,7 @@ cta:
     custom: true
     headline: "Interested in writing your thesis?"
     intro: |
-        If you are interested in writing your thesis with me, that's great! Let's talk about:
+        If you are interested in doing thesis research with me, that's great! Let's talk about:
 
         - Bachelor and Master level research
         - Available thesis topics
