Added dissemination section and several improvements.

--- a/src/site/service.html
+++ b/src/site/service.html
@@ -1,6 +1,6 @@
 ---
 title: Things I do
-heading: Services and Functions
+heading: Functions
 intro: |
     In addition to my [research](/research/) and my [teaching](/teaching/) activities I serve in various ways. Here are some of the things I like to shout about.
 layout: default
