--- a/src/site/theses.html
+++ b/src/site/theses.html
@@ -1,5 +1,5 @@
 ---
-title: Theses
+title: Supervising
 intro: |
     Here you find a list of active and completed thesis topics I work on with students.
 layout: default
