First working version of landing page.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -1,9 +1,22 @@
 ---
-title: The web, design, and accessibility
+title: Sarah's Science
 intro: |
-    I’m Martin, an accessibility specialist with a background in user interface and interaction design, and frontend web development. I'm the Lead Accessibility Specialist at [Sage](https://www.sage.com/) and former co-organiser at [FrontendNE](https://www.frontendne.co.uk); here's a wee bit more [about me](/about) and [what I'm up to now](/now).
+    I’m Sarah Lindner, a physicist specializing in experimental quantum optics.
+
+    I'm a postdoc at the department of [experimental Physics](https://physik.uni-graz.at/en/experimental-physics/) at [Karl-Franzens University](https://www.uni-graz.at) of [Graz](https://www.graz.at/), Austria.
+
+    I am happy to be part of the [Optics of Nano and Quantum Materials](https://physik.uni-graz.at/de/optics-of-nano-and-quantum-materials/) research group headed by [Prof. Peter Banzer](https://personensuche.uni-graz.at/en/?tx_unigrazonline_personsearch%5BcontentUid%5D=380045&tx_unigrazonline_personsearch%5Bcontroller%5D=PersonSearch&tx_unigrazonline_personsearch%5BpersonId%5D=5D73E68FDC18522E&cHash=5f405d5a9880aaeb50ac4098329cb925).
+
 layout: home
 home: true
-cta: false
 summaryImage: large
+cta:
+    custom: true
+    headline: "Interested in my work?"
+    intro: |
+        If you are interested in my work, that's great! Let's talk about:
+
+        - Possible joined research projects
+        - Supervision of Bachelor or Master level research work
+        - Speaking at your event
 ---
