--- a/src/site/index.html
+++ b/src/site/index.html
@@ -1,5 +1,5 @@
 ---
-title: Sarah's Science
+title: Sarah's Lab
 intro: |
     I’m Sarah Lindner, a physicist specializing in experimental quantum optics.
 
