--- a/src/site/feeds/atom.html
+++ b/src/site/feeds/atom.html
@@ -8,16 +8,15 @@ permalink: feeds/main.xml
     <link href="{{ site.url }}" />
     <link rel="self" type="application/atom+xml" href="{{ site.url }}/{{ permalink }}" />
     <id>{{ site.url }}/{{ permalink }}</id>
-    <updated>{{ collections.post | rssLastUpdatedDate }}</updated>
-    <rights type="html">&amp;copy; copyright 2009 to {{ "" | getCurrentYear }}, {{ site.company }}</rights>
-    <logo>{{ site.url }}/assets/img/tempertemper-feed.png</logo>
+    <updated>{{ collections.publication | rssLastUpdatedDate }}</updated>
+    <rights type="html">&amp;copy; copyright 2023 to {{ "" | getCurrentYear }}, {{ site.company }}</rights>
+    <logo>{{ site.url }}/assets/img/feed.png</logo>
     <icon>{{ site.url }}/assets/img/icons/favicon.png</icon>
     <author>
         <name>{{ site.author.name }}</name>
         <email>{{ site.author.email }}</email>
-        <uri>https://mastodon.social/@tempertemper</uri>
     </author>
-    {%- for post in collections.post | reverse %}
+    {%- for post in collections.publication | reverse %}
     <entry>
         <title>{{ post.data.title | smart | safe | replace("&nbsp;", " ") }}</title>
         <link href="{{ site.url }}{{ post.url | replace (".html", "") }}" />
@@ -26,7 +25,7 @@ permalink: feeds/main.xml
         <updated>{%- if post.updated %}{{ post.updated  | rssDate }}{%- else %}{{ post.date | rssDate }}{%- endif %}</updated>
         <author>
             <name>{{ site.author.name }}</name>
-            <uri>https://mastodon.social/@tempertemper</uri>
+            <email>{{ site.author.email }}</email>
         </author>
         <summary>{{ post.data.intro | markdown | safe | striptags }}</summary>
         {%- set postTags = post.data.tags | tagsOnPage %}
@@ -34,7 +33,7 @@ permalink: feeds/main.xml
         {% for category in postTags %}<category>{{ category }}</category>{% endfor %}
         {%- endif %}
         <content type="html" xml:lang="en"><![CDATA[
-            {{ post.templateContent | safe }}<p>The article <a rel="nofollow" href="{{ site.url }}{{ post.url | replace (".html", "") }}">{{ post.data.title | smart | safe | replace("&nbsp;", " ") }}</a> appeared first on <a rel="nofollow" href="{{ site.url }}">www.tempertemper.net</a>.</p>
+            {{ post.templateContent | safe }}<p>The publication <a rel="nofollow" href="{{ site.url }}{{ post.url | replace (".html", "") }}">{{ post.data.title | smart | safe | replace("&nbsp;", " ") }}</a> was announced first on <a rel="nofollow" href="{{ site.url }}">{{ site.title }}</a>.</p>
             ]]></content>
     </entry>
     {%- endfor %}
