Improved nav and footer.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -19,4 +19,5 @@ cta:
         - Possible joined research projects
         - Supervision of Bachelor or Master level research work
         - Speaking at your event
+        - Media inquiries
 ---
