First fully functional skeleton of website.

--- a/src/site/teaching.html
+++ b/src/site/teaching.html
@@ -2,9 +2,6 @@
 title: Teaching
 intro: |
     Do you study physics? Into experiments? Here's what I can teach you.
-
-    Use the [university course portal](https://online.uni-graz.at/kfu_online/wblvangebot.wbshowlvoffer?ppersonnr=72850) to sign-up for current or upcoming courses and to check-out locations and timetables!
-
 layout: default
 resources: true
 cta:
@@ -16,6 +13,8 @@ cta:
         - Bachelor and Master level research
         - Available thesis topics
 ---
+
+<p>Use <a href="{{site.author.courses}}" target="_blank">Uni Graz Online</a> to sign-up for current or upcoming courses and to check-out locations and timetables!</p>
 
 <ol class="hfeed index-list" reversed>
     {%- for post in collections.teaching | reverse %}
