Preparing removing stuff.

--- a/src/site/publications.html
+++ b/src/site/publications.html
@@ -3,10 +3,18 @@ title: Publications by Sarah Lindner
 heading: Publications
 intro: |
     This is a list of my most recent publications.
-description: A blog for designers and frontend web developers. Covering topics such as accessibility, the web, Git, and design from interesting companies such as Apple.
+    You can also [browse by category](/categories) or [year](/research/years).
+description: Sarah Lindners publication list.
 layout: default
-noCta: true
 listing: true
+cta:
+    custom: true
+    headline: "Interested in my research?"
+    intro: |
+        If you are interested in my work, that's great! Let's talk about:
+
+        - Possible joined research projects
+        - Contributing to your expert event
 ---
 
 <ol class="hfeed index-list" reversed>
