--- a/src/site/years.html
+++ b/src/site/years.html
@@ -1,14 +1,14 @@
 ---
-title: Blog posts by year
+title: Publications by year
 intro: |
-    I've written a lot over the years! Head to a year to find the blog posts I wrote then:
+    I've written a lot over the years! Head to a year to find it's publications:
 layout: default
-permalink: /blog/years.html
+permalink: /research/years.html
 ---
 
 <p>
-    {%- set years = collections.post | getYears %}
+    {%- set years = collections.publication | getYears %}
     {%- for year in years | reverse %}
-        <a href="/blog/year/{{ year }}">{{ year }}</a>{%- if not loop.last -%}, {%- else -%}.{% endif %}
+        <a href="/research/year/{{ year }}">{{ year }}</a>{%- if not loop.last -%}, {%- else -%}.{% endif %}
     {%- endfor %}
 </p>
