Various improvements and adaptations due to removal of code.

--- a/src/site/categories.html
+++ b/src/site/categories.html
@@ -1,7 +1,9 @@
 ---
 title: Categories
 intro: |
-    I write about lots of subjects. Here's a list of subject categories so that you can jump to articles and resources bundled together neatly:
+    This websites collects a lot of resources on various subjects.
+
+    Here's a list of categories so that you can jump to different resources bundled together neatly:
 layout: default
 permalink: /categories.html
 ---
