--- a/src/site/theses.html
+++ b/src/site/theses.html
@@ -1,7 +1,7 @@
 ---
 title: Supervising
 intro: |
-    Here you find a list of active and completed thesis topics I work on with students.
+    Here you find a list of active and completed thesis topics I am involved with.
 layout: default
 resources: true
 cta:
@@ -11,6 +11,7 @@ cta:
         If you are interested in doing thesis research with me, that's great! Let's talk about:
 
         - Bachelor and Master level research
+        - Your scientific interests
         - Available thesis topics
 ---
 
