--- a/src/site/humans.html
+++ b/src/site/humans.html
@@ -4,27 +4,19 @@ permalink: /humans.txt
 /* TEAM */
 
     Owner: {{ site.author.name }}
-    Mastodon: {{ site.author.mastodon }}
+    LinkedIn: {{ site.author.linkedin }}
     Contact: {{ site.url | replace('https://', '') }}/contact
-    Location: Newcastle upon Tyne, United Kingdom
-    From: Glasgow, Scotland, United Kingdom
-
+    Location: {{ site.adress.city }}, {{ site.adress.country}}
 
 /* THANKS */
 
-    Initial brand design: Ant Barker
-    Website: designbyant.co.uk
-
-    Help with JavaScript: Drew Miley
-
-    Case study proof reading: Lisa Stuckey
-    Twitter: @lisa_m_dunn
-
+    Design: Michael Dirnberger
+    Website: k33experts.com
 
 /* SITE */
 
     Last update: {{ "" | getCurrentDate }}
     Language: English
     Standards: HTML5, WCAG 2.1 AA
-    Tooling: npm, Eleventy, Modular Scale
-    Software: Sublime Text, GitHub, Netlify
+    Tooling: npm, Eleventy, TailwindCss
+    Software: Nvim, GitHub, Netlify
