Disabled kfu course feed.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -6,10 +6,10 @@ intro: |
     I'm a postdoc at the department of [experimental Physics](https://physik.uni-graz.at/en/experimental-physics/) at [Karl-Franzens University](https://www.uni-graz.at) of [Graz](https://www.graz.at/), Austria.
 
     I am happy to be part of the [Optics of Nano and Quantum Materials](https://physik.uni-graz.at/de/optics-of-nano-and-quantum-materials/) research group headed by [Prof. Peter Banzer](https://personensuche.uni-graz.at/en/?tx_unigrazonline_personsearch%5BcontentUid%5D=380045&tx_unigrazonline_personsearch%5Bcontroller%5D=PersonSearch&tx_unigrazonline_personsearch%5BpersonId%5D=5D73E68FDC18522E&cHash=5f405d5a9880aaeb50ac4098329cb925).
-
 layout: home
 home: true
 summaryImage: large
+kfu_course_feed: false
 cta:
     custom: true
     headline: "Interested in my work?"
