Removed css styling and prepared for adding tailwind.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -10,6 +10,9 @@ layout: home
 home: true
 summaryImage: large
 kfu_course_feed: false
+styling:
+    css: false
+    tailwind: true
 cta:
     custom: true
     headline: "Interested in my work?"
