Changed some lists to unordered.

--- a/src/site/dissemination.html
+++ b/src/site/dissemination.html
@@ -13,8 +13,8 @@ cta:
         - Speaking at your event for experts or wider audiences
 ---
 
-<ol class="hfeed index-list" reversed>
+<ul class="hfeed index-list" reversed>
     {%- for post in collections.dissemination | reverse %}
         {%- include "post-in-list.html" %}
     {%- endfor %}
-</ol>
+</ul>
