--- a/src/site/publications.html
+++ b/src/site/publications.html
@@ -17,8 +17,8 @@ cta:
         - Contributing to your expert event
 ---
 
-<ol class="hfeed index-list" reversed>
+<ul class="hfeed index-list" reversed>
     {%- for post in collections.publication | reverse %}
         {%- include "post-in-list.html" %}
     {%- endfor %}
-</ol>
+</ul>
