--- a/src/site/theses.html
+++ b/src/site/theses.html
@@ -15,8 +15,8 @@ cta:
         - Available thesis topics
 ---
 
-<ol class="hfeed index-list" reversed>
+<ul class="hfeed index-list" reversed>
     {%- for post in collections.theses | reverse %}
         {%- include "post-in-list.html" %}
     {%- endfor %}
-</ol>
+</ul>
