Reinserted course feed.

--- a/src/site/index.html
+++ b/src/site/index.html
@@ -8,7 +8,7 @@ intro: |
 layout: home
 home: true
 summaryImage: large
-kfu_course_feed: false
+kfu_course_feed: true
 styling:
     css: false
     tailwind: true
