--- a/src/site/research.html
+++ b/src/site/research.html
@@ -2,7 +2,7 @@
 title: Research by Sarah Lindner
 heading: My Research Projects
 intro: |
-    I've done a lot of various research over the years; here are some of my highlights.
+    I've done a lot of various research over the years. See my [publication list](/publicatiions). Here are some of my projects.
 layout: default
 listing: true
 cta:
