--- a/src/site/research.html
+++ b/src/site/research.html
@@ -2,7 +2,7 @@
 title: Research by Sarah Lindner
 heading: My Research Projects
 intro: |
-    I've done a lot of various research over the years. See my [publication list](/publicatiions). Here are some of my projects.
+    I've done a lot of various research over the years. See my [publication list](/publications). Here are some of my projects.
 layout: default
 listing: true
 cta:
@@ -16,7 +16,7 @@ cta:
         - Speaking at your event
 ---
 
-<ul class="index-list" reversed>
+<ul class="list-none" reversed>
     {%- for post in collections['project'] | reverse %}
         {%- include "post-in-list.html" %}
     {%- endfor %}
