Fixed small wording issues.

--- a/src/site/publications.html
+++ b/src/site/publications.html
@@ -1,5 +1,5 @@
 ---
-title: Publications by Sarah Lindner
+title: Publications
 heading: Publications
 intro: |
     This is a list of my most recent publications.
