--- a/src/site/research.html
+++ b/src/site/research.html
@@ -1,5 +1,5 @@
 ---
-title: Research by Sarah Lindner
+title: Research
 heading: My Research Projects
 intro: |
     I've done a lot of various research over the years. See my [publication list](/publications). Here are some of my projects.
