--- a/src/site/service.html
+++ b/src/site/service.html
@@ -1,5 +1,5 @@
 ---
-title: Things I do
+title: Functions
 heading: Functions
 intro: |
     In addition to my [research](/research/) and my [teaching](/teaching/) activities I serve in various ways. Here are some of the things I like to shout about.
