Added traditional publication list.

--- a/src/site/publications.html
+++ b/src/site/publications.html
@@ -2,7 +2,7 @@
 title: Publications
 heading: Publications
 intro: |
-    This is a list of my most recent publications.
+    This is an accessible list of my most recent publications. You can also browse my publications as a [plain list](/publications/list).
     You can also [browse by category](/categories) or [year](/research/years).
 description: Sarah Lindners publication list.
 layout: default
