Purged unused classes.

--- a/src/site/dissemination.html
+++ b/src/site/dissemination.html
@@ -13,7 +13,7 @@ cta:
         - Speaking at your event for experts or wider audiences
 ---
 
-<ul class="hfeed index-list" reversed>
+<ul reversed>
     {%- for post in collections.dissemination | reverse %}
         {%- include "post-in-list.html" %}
     {%- endfor %}
