--- a/src/site/publications.html
+++ b/src/site/publications.html
@@ -17,7 +17,7 @@ cta:
         - Contributing to your expert event
 ---
 
-<ul class="hfeed index-list" reversed>
+<ul reversed>
     {%- for post in collections.publication | reverse %}
         {%- include "post-in-list.html" %}
     {%- endfor %}
