--- a/src/site/theses.html
+++ b/src/site/theses.html
@@ -15,7 +15,7 @@ cta:
         - Available thesis topics
 ---
 
-<ul class="hfeed index-list" reversed>
+<ul reversed>
     {%- for post in collections.theses | reverse %}
         {%- include "post-in-list.html" %}
     {%- endfor %}
