--- a/src/site/category.html
+++ b/src/site/category.html
@@ -30,7 +30,7 @@ permalink: /category/{{ category | slugify | safe }}.html
 {% endif %}
     A <a href="/categories">full list of categories</a> is also available.</p>
 
-<ol class="hfeed index-list" reversed>
+<ol reversed>
     {% set categoryList = collections[ category ] %}
     {% for post in categoryList | reverse %}
         {% include "post-in-list.html" %}
