--- a/src/site/teaching.html
+++ b/src/site/teaching.html
@@ -16,7 +16,7 @@ cta:
 
 <p>Use <a href="{{site.author.courses}}" target="_blank">Uni Graz Online</a> to sign-up for current or upcoming courses and to check-out locations and timetables!</p>
 
-<ul class="hfeed index-list" reversed>
+<ul reversed>
     {%- for post in collections.teaching | reverse %}
         {%- include "post-in-list.html" %}
     {%- endfor %}
